# nanoQwen

./: README.md  pyproject.toml
misc/: gpt2.py  gpt_ablation.py
nanoqwen/: QwenGPT.py  compare_hf.py  data.py  generate.py  qwen3.py  sft_data.py  train.py  train_sft.py
scripts/: download_dataset.py  download_sftdata.py
